--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,7 @@ target_link_libraries(heat_xfer PUBLIC iapws)
 # =============================================================================
 
 set(SOURCES
+    src/boron_driver.cpp
     src/coupled_driver.cpp
     src/comm_split.cpp
     src/surrogate_heat_driver.cpp
